--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rolodex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://utevo.github.io/Rolodex/",
   "dependencies": {
+    "gh-pages": "2.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
